--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.tabSize": 2
   },
-  "cSpell.words": ["kajilab"]
+  "cSpell.words": [
+    "kaji",
+    "kajilab"
+  ]
 }
