--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1",
-    "typescript-eslint": "^8.28.0"
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
