--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "astro": "^5.5.4",
-    "sass": "^1.86.0"
+    "sass": "^1.86.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
