wip: パーティクル

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,10 +18,13 @@
   "cSpell.words": [
     "kaji",
     "kajilab",
+    "momiji",
     "Nums",
     "onhover",
     "pagenation",
+    "sakura",
     "subgrid",
-    "techstack"
+    "techstack",
+    "tsparticles"
   ]
 }
