--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sass": "^1.86.0",
     "sharp": "^0.33.5",
     "tsparticles": "2.10.1",
-    "tsparticles-engine": "2.10.1"
+    "tsparticles-engine": "2.10.1",
+    "tsparticles-preset-fireworks": "2.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
