--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.3.0",
     "astro": "^5.5.4",
     "astro-particles": "^2.10.0",
+    "dayjs": "^1.11.13",
     "sass": "^1.86.0",
     "sharp": "^0.33.5",
     "tsparticles": "2.10.1",
