--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "astro": "^5.5.4",
     "astro-particles": "^2.10.0",
     "dayjs": "^1.11.13",
+    "mdast": "^3.0.0",
     "sass": "^1.86.0",
     "sharp": "^0.33.5",
     "tsparticles": "2.10.1",
     "tsparticles-engine": "2.10.1",
-    "tsparticles-preset-fireworks": "2.10.1"
+    "tsparticles-preset-fireworks": "2.10.1",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/mdast": "^4.0.4",
     "eslint": "^9.23.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
